# BP_invest

./: .gitignore  README.md  _🧾_Homepage.py  pyproject.toml
pages/: 1_​✍️_Inputs.py  2_📈_Checks.py  2_🔢_Checks.py  3_📊_Comparaison.py  4_📈_Dashboard.py
utils/: computations.py  gcp_connector.py  inputs.py  transformations.py
